# web-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_server.py
web_mcp/: server.py
