[project]
name = "web-mcp"
version = "0.1.0"
description = "MCP server for fetching web content"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
web-mcp = "web_mcp.server:main"

[tool.pytest.ini_options]
addopts = "--cov=web_mcp --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
